noinst_LIBRARIES = libllio.a
libllio_a_SOURCES = llio_common.c llio_common.h \
  org_catacombae_hfsexplorer_win32_WindowsLowLevelIO.c \
  org_catacombae_hfsexplorer_win32_WindowsLowLevelIO.h \
  org_catacombae_hfsexplorer_win32_WritableWin32File.c \
  org_catacombae_hfsexplorer_win32_WritableWin32File.h

AM_CFLAGS = -std=c89
